teachers can create assignments, and students can submit them
# Conflicts:
#	src/main/java/com/obelix/homework/platform/config/exception/handler/GlobalExceptionHandler.java
#	src/main/java/com/obelix/homework/platform/web/user/controller/StudentController.java
#	src/main/java/com/obelix/homework/platform/web/user/controller/TeacherController.java
#	src/main/java/com/obelix/homework/platform/web/user/service/PlagiarismDetectionService.java