@@ -5,6 +5,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.HttpRequestMethodNotSupportedException;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
@@ -21,49 +22,49 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(AssignmentNotFoundException.class)
     public ResponseEntity<ErrorResponse> handleAssignmentNotFoundException(AssignmentNotFoundException ex) {
-        int status = HttpStatus.NOT_FOUND.value();
+        var status = HttpStatus.NOT_FOUND.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, AssignmentNotFoundException.ERROR, ex.getMessage()));
     }
 
     @ExceptionHandler(CourseNotFoundException.class)
     public ResponseEntity<ErrorResponse> handleCourseNotFoundException(CourseNotFoundException ex) {
-        int status = HttpStatus.NOT_FOUND.value();
+        var status = HttpStatus.NOT_FOUND.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, CourseNotFoundException.ERROR, ex.getMessage()));
     }
 
     @ExceptionHandler(NoSuchRoleException.class)
     public ResponseEntity<ErrorResponse> handleNoSuchRoleException(NoSuchRoleException ex) {
-        int status = HttpStatus.NOT_FOUND.value();
+        var status = HttpStatus.NOT_FOUND.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, NoSuchRoleException.ERROR, ex.getMessage()));
     }
 
     @ExceptionHandler(SubjectNotFoundException.class)
     public ResponseEntity<ErrorResponse> handleSubjectNotFoundException(SubjectNotFoundException ex) {
-        int status = HttpStatus.NOT_FOUND.value();
+        var status = HttpStatus.NOT_FOUND.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, SubjectNotFoundException.ERROR, ex.getMessage()));
     }
 
     @ExceptionHandler(UsernameExistsException.class)
     public ResponseEntity<ErrorResponse> handleUsernameExistsException(UsernameExistsException ex) {
-        int status = HttpStatus.CONFLICT.value();
+        var status = HttpStatus.CONFLICT.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, UsernameExistsException.ERROR, ex.getMessage()));
     }
 
     @ExceptionHandler(UserNotFoundException.class)
     public ResponseEntity<ErrorResponse> handleUserNotFoundException(UserNotFoundException ex) {
-        int status = HttpStatus.NOT_FOUND.value();
+        var status = HttpStatus.NOT_FOUND.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, UserNotFoundException.ERROR, ex.getMessage()));
     }
 
     @ExceptionHandler(SubjectHasAssignedTeacherException.class)
     public ResponseEntity<ErrorResponse> handleSubjectHasAssignedTeacherException(SubjectHasAssignedTeacherException ex) {
-        int status = HttpStatus.CONFLICT.value();
+        var status = HttpStatus.CONFLICT.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, SubjectHasAssignedTeacherException.ERROR, ex.getMessage()));
     }
@@ -90,31 +91,37 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(InviteCodeNotFoundException.class)
     public ResponseEntity<ErrorResponse> handleInviteCodeNotFoundException(InviteCodeNotFoundException ex) {
-        int status = HttpStatus.NOT_FOUND.value();
+        var status = HttpStatus.NOT_FOUND.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, InviteCodeNotFoundException.ERROR, ex.getMessage()));
     }
 
     @ExceptionHandler(NoResourceFoundException.class)
     public ResponseEntity<ErrorResponse> handleNoResourceFoundException() {
-        int status = HttpStatus.NOT_FOUND.value();
+        var status = HttpStatus.NOT_FOUND.value();
         return ResponseEntity.status(status)
                 .body(new ErrorResponse(status, "Page Not Found", "This page doesn't seem to exist"));
     }
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
     public ResponseEntity<ErrorResponse> handleMethodArgumentNotValidException(MethodArgumentNotValidException ex) {
-        int status = HttpStatus.BAD_REQUEST.value();
+        var status = HttpStatus.BAD_REQUEST.value();
         return ResponseEntity.status(status)
-                .body(new ErrorResponse(status, "Invalid Request",
-                        ex.getBindingResult().getAllErrors().get(0).getDefaultMessage()));
+                .body(new ErrorResponse(status, "Bad Request", ex.getBindingResult().getAllErrors().getFirst().getDefaultMessage()));
+    }
+
+    @ExceptionHandler(HttpRequestMethodNotSupportedException.class)
+    public ResponseEntity<ErrorResponse> handleHttpRequestMethodNotSupportedException(HttpRequestMethodNotSupportedException ex) {
+        var status = HttpStatus.METHOD_NOT_ALLOWED.value();
+        return ResponseEntity.status(status)
+                .body(new ErrorResponse(status, "Method Not Allowed", ex.getMessage()));
     }
 
     @ExceptionHandler(Exception.class)
     public ResponseEntity<ErrorResponse> handleGlobalException(Exception ex) {
-        int status = HttpStatus.INTERNAL_SERVER_ERROR.value();
-        LOGGER.error("Exception: ", ex);
+        var status = HttpStatus.INTERNAL_SERVER_ERROR.value();
+        LoggerFactory.getLogger(GlobalExceptionHandler.class).error(ex.getMessage(), ex);
         return ResponseEntity.status(status)
-                .body(new ErrorResponse(status, "Internal Server Error", "Oops! Something went wrong."));
+                .body(new ErrorResponse(status, "Internal Server Error", "Oopsie, something went wrong :("));
     }
 }
